Updates to Register & Login pages, alignment

--- a/mlkit/app/src/main/res/layout/fragment_register.xml
+++ b/mlkit/app/src/main/res/layout/fragment_register.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayout3"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -12,189 +12,211 @@
         android:id="@+id/logo"
         android:layout_width="490dp"
         android:layout_height="100dp"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="0dp"
-        android:layout_alignParentTop="true"
+        android:layout_centerVertical="true"
         android:layout_marginTop="60dp"
-        android:src="@drawable/foodology_removebg_preview__1_" />
+        android:src="@drawable/foodology_removebg_preview__1_"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.506"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/elipse"
-        android:layout_width="match_parent"
-        android:layout_height="396dp"
-        android:layout_alignParentBottom="true"
-        android:src="@drawable/ic_elipse" />
+        android:layout_width="3169dp"
+        android:layout_height="1000dp"
+        android:layout_centerVertical="true"
+        android:src="@drawable/ic_elipse"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tv_subtitle"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/tv_subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:fontFamily="@font/roboto_regular"
         android:text="@string/welcome"
         android:textColor="@color/light_blue"
-        android:textSize="17sp" />
+        android:textSize="17sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/et_name"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="@string/your_name"
-        android:textColorHint="@color/dark_blue"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="60dp"
-        android:padding="15dp"
-        android:inputType="textPersonName"
+        android:layout_width="290dp"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="17dp"
+        android:background="@android:color/transparent"
         android:fontFamily="@font/roboto_regular"
-        android:layout_below="@id/tv_subtitle"
-        android:background="@drawable/et_custom"
-        android:layout_marginTop="-15dp"
+        android:hint="@string/your_name"
+        android:inputType="textPersonName"
+        android:padding="15dp"
         android:textColor="@color/dark_blue"
-        android:textSize="15sp"/>
+        android:textColorHint="@color/dark_blue"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toTopOf="@+id/et_email"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_subtitle" />
 
     <View
         android:id="@+id/line_name"
-        android:layout_width="918dp"
+        android:layout_width="260dp"
         android:layout_height="1dp"
-        android:layout_marginLeft="75dp"
-        android:layout_marginRight="75dp"
-        android:layout_centerInParent="true"
-        android:layout_below="@id/et_name"
-        android:layout_marginTop="-5dp"
-        android:background="@drawable/login_line" />
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:background="@drawable/login_line"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/et_name"
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/et_email"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="@string/e_mail"
-        android:textColorHint="@color/dark_blue"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="60dp"
-        android:padding="15dp"
-        android:fontFamily="@font/roboto_regular"
-        android:inputType="textEmailAddress"
-        android:layout_below="@id/et_name"
-        android:background="@drawable/et_custom"
+        android:layout_width="290dp"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:background="@android:color/transparent"
+        android:fontFamily="@font/roboto_regular"
+        android:hint="@string/e_mail"
+        android:inputType="textEmailAddress"
+        android:padding="15dp"
         android:textColor="@color/dark_blue"
-        android:textSize="15sp" />
+        android:textColorHint="@color/dark_blue"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toTopOf="@+id/et_password"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/et_name" />
 
     <View
         android:id="@+id/line_email"
-        android:layout_width="918dp"
+        android:layout_width="260dp"
         android:layout_height="1dp"
-        android:layout_marginLeft="75dp"
-        android:layout_marginRight="75dp"
-        android:layout_centerInParent="true"
-        android:layout_below="@id/et_email"
-        android:layout_marginTop="-5dp"
-        android:background="@drawable/login_line" />
+        android:layout_centerVertical="true"
+        android:background="@drawable/login_line"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/et_email"
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/et_password"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="@string/password"
-        android:textColorHint="@color/dark_blue"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="60dp"
-        android:padding="15dp"
+        android:layout_width="290dp"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginBottom="5dp"
+        android:background="@android:color/transparent"
         android:fontFamily="@font/roboto_regular"
+        android:hint="@string/password"
         android:inputType="textPassword"
-        android:layout_below="@id/et_email"
-        android:background="@drawable/et_custom"
-        android:layout_marginTop="5dp"
+        android:padding="15dp"
         android:textColor="@color/dark_blue"
-        android:textSize="15sp" />
+        android:textColorHint="@color/dark_blue"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toTopOf="@+id/et_phone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/et_email" />
 
     <View
         android:id="@+id/line_password"
-        android:layout_width="918dp"
+        android:layout_width="260dp"
         android:layout_height="1dp"
-        android:layout_marginLeft="75dp"
-        android:layout_marginRight="75dp"
-        android:layout_centerInParent="true"
-        android:layout_below="@id/et_password"
-        android:layout_marginTop="-5dp"
-        android:background="@drawable/login_line" />
+        android:layout_centerVertical="true"
+        android:background="@drawable/login_line"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/et_password"
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/et_phone"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="Phone Number"
-        android:textColorHint="@color/dark_blue"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="60dp"
-        android:padding="15dp"
+        android:layout_width="290dp"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginBottom="28dp"
+        android:background="@android:color/transparent"
         android:fontFamily="@font/roboto_regular"
+        android:hint="Phone Number"
         android:inputType="textPhonetic"
-        android:layout_below="@id/et_password"
-        android:background="@drawable/et_custom"
-        android:layout_marginTop="5dp"
+        android:padding="15dp"
         android:textColor="@color/dark_blue"
-        android:textSize="15sp" />
+        android:textColorHint="@color/dark_blue"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_register"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/et_password" />
 
     <View
         android:id="@+id/line_phone"
-        android:layout_width="918dp"
+        android:layout_width="260dp"
         android:layout_height="1dp"
-        android:layout_marginLeft="75dp"
-        android:layout_marginRight="75dp"
-        android:layout_centerInParent="true"
-        android:layout_below="@id/et_phone"
-        android:layout_marginTop="-5dp"
-        android:background="@drawable/login_line" />
+        android:layout_centerVertical="true"
+        android:background="@drawable/login_line"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/et_phone"
+        app:layout_constraintVertical_bias="0.0" />
 
 
     <Button
         android:id="@+id/btn_register"
-        android:layout_width="match_parent"
+        android:layout_width="270dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="70dp"
-        android:layout_marginRight="70dp"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="3dp"
+        android:layout_marginBottom="46dp"
+        android:background="@drawable/btn_custom"
         android:fontFamily="@font/roboto_regular"
+        android:text="Register"
         android:textColor="@android:color/white"
         android:textSize="15sp"
-        android:background="@drawable/btn_custom"
-        android:layout_below="@id/et_phone"
-        android:layout_marginTop="20dp"
-        android:text="@string/register"/>
-
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/et_phone"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/swipeLeft"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:text="Back To Login"
-        android:textSize="10sp"
-        android:textColor="@color/dark_blue"
-        android:fontFamily="@font/roboto_regular"
-        android:layout_alignParentStart="true"
+        android:layout_marginLeft="27dp"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="27dp"/>
+        android:background="@android:color/transparent"
+        android:fontFamily="@font/roboto_regular"
+        android:text="Back To Login"
+        android:textColor="@color/dark_blue"
+        android:textSize="10sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="23dp"
         android:layout_marginLeft="13dp"
+        android:layout_marginTop="23dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_arrow_left" />
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/btn_register"
-        android:layout_marginLeft="70dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="70dp"
-        android:background="@drawable/btn_custom"
-        android:visibility="invisible" />
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
