--- a/mlkit/app/src/main/res/layout/fragment_login.xml
+++ b/mlkit/app/src/main/res/layout/fragment_login.xml
@@ -11,6 +11,7 @@
         android:id="@+id/elipse"
         android:layout_width="3169dp"
         android:layout_height="1000dp"
+        android:layout_centerVertical="true"
         android:src="@drawable/ic_elipse"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -89,7 +90,7 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginTop="5dp"
-        android:layout_marginBottom="3dp"
+        android:layout_marginBottom="5dp"
         android:background="@drawable/btn_custom_login"
         android:fontFamily="@font/roboto_regular"
         android:text="@string/login"
@@ -105,7 +106,6 @@
         android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginTop="3dp"
         android:layout_marginBottom="46dp"
         android:background="@drawable/btn_custom"
         android:fontFamily="@font/roboto_regular"
