--- a/mlkit/app/src/main/res/layout/home_page.xml
+++ b/mlkit/app/src/main/res/layout/home_page.xml
@@ -128,7 +128,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginTop="310dp"
         android:layout_marginEnd="180dp"
-        android:layout_marginBottom="395dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="@font/roboto_regular"
         android:text="@string/what_s_in_your_fridge"
         android:textColor="@android:color/black"
@@ -138,7 +138,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"/>
+        app:layout_constraintVertical_bias="0.0" />
 
     <!-- See all Button 1-->
     <Button
@@ -160,107 +160,96 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"/>
 
-    <!--UNDONE egg icon-->
+    <!--egg icon-->
     <View
         android:id="@+id/home_egg"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_marginTop="350dp"
-        android:layout_marginEnd="280dp"
-        android:layout_marginBottom="350dp"
+        android:layout_marginBottom="30dp"
         android:background="@drawable/eggicon"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/home_text_lunch"
         app:layout_constraintRight_toLeftOf="@id/home_watermelon"
         app:layout_constraintStart_toStartOf="@id/home_text_fridge"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="@id/home_text_fridge"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintHorizontal_bias="1.0"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <!--UNDONE watermelon icon-->
+    <!--watermelon icon-->
     <View
         android:id="@+id/home_watermelon"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="150dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="100dp"
         android:layout_marginTop="350dp"
-        android:layout_marginEnd="190dp"
-        android:layout_marginBottom="310dp"
+        android:layout_marginBottom="30dp"
         android:background="@drawable/watermelonicon"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/home_text_lunch"
+        app:layout_constraintRight_toLeftOf="@id/home_springonion"
+        app:layout_constraintStart_toStartOf="@id/home_text_fridge"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!--UNDONE icon spring onion-->
+    <!--icon spring onion-->
     <View
         android:id="@+id/home_springonion"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="250dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="200dp"
         android:layout_marginTop="350dp"
-        android:layout_marginEnd="90dp"
-        android:layout_marginBottom="310dp"
+        android:layout_marginBottom="30dp"
         android:background="@drawable/springonionicon"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/home_text_lunch"
+        app:layout_constraintRight_toLeftOf="@id/home_mushroom"
+        app:layout_constraintStart_toStartOf="@id/home_text_fridge"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!--UNDONE icon mushroom-->
+    <!--icon mushroom-->
     <View
         android:id="@+id/home_mushroom"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="350dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="300dp"
         android:layout_marginTop="350dp"
-        android:layout_marginEnd="-10dp"
-        android:layout_marginBottom="310dp"
+        android:layout_marginBottom="30dp"
         android:background="@drawable/mushroomicon"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/home_text_lunch"
+        app:layout_constraintLeft_toRightOf="@id/home_springonion"
+        app:layout_constraintStart_toStartOf="@id/home_text_fridge"
         app:layout_constraintTop_toTopOf="parent" />
 
     <!--UNDONE What's for lunch?-->
     <TextView
         android:id="@+id/home_text_lunch"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="250dp"
+        android:layout_height="24dp"
+        android:layout_marginEnd="180dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="@font/roboto_regular"
-        android:gravity="center_horizontal|top"
         android:text="@string/what_s_for_lunch"
         android:textColor="@android:color/black"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/home_recipe_box_1"
-        app:layout_constraintEnd_toEndOf="@id/home_background"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@id/home_egg"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/home_egg"
         app:layout_constraintVertical_bias="0.0" />
 
     <!--UNDONE See all Button 2-->
     <Button
         android:id="@+id/home_see_all_2_button"
-        android:layout_width="100dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="310dp"
-        android:layout_marginTop="436dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginBottom="270dp"
+        android:layout_width="96dp"
+        android:layout_height="24dp"
+        android:layout_marginTop="175dp"
+        android:layout_marginBottom="24dp"
         android:background="@drawable/btn_see_all"
         android:fontFamily="@font/roboto_regular"
         android:text="@string/See_All"
         android:textColor="@android:color/holo_orange_dark"
         android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@id/home_recipe_box_1"
+        app:layout_constraintEnd_toEndOf="@id/home_see_all_1_button"
+        app:layout_constraintLeft_toRightOf="@id/home_text_lunch"
+        app:layout_constraintTop_toTopOf="@id/home_see_all_1_button"
+        app:layout_constraintVertical_bias="0.7" />
 
     <!--recipe box 1-->
     <View
@@ -282,6 +271,7 @@
         android:layout_width="140dp"
         android:layout_height="210dp"
         android:layout_marginStart="50dp"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="20dp"
         android:background="@drawable/ic_recipe_box"
         app:layout_constraintBottom_toBottomOf="@id/bottom_base"
@@ -296,6 +286,7 @@
         android:layout_width="140dp"
         android:layout_height="210dp"
         android:layout_marginStart="300dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="5dp"
         android:layout_marginBottom="20dp"
         android:background="@drawable/ic_recipe_box"
@@ -311,7 +302,7 @@
         android:layout_width="95dp"
         android:layout_height="130dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="500dp"
+        android:layout_marginTop="540dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/ic_friedrice"
         app:layout_constraintBottom_toTopOf="@id/bottom_base"
@@ -331,7 +322,6 @@
         android:src="@drawable/friedrice"
         app:layout_constraintEnd_toEndOf="@id/home_recipe_box_1"
         app:layout_constraintStart_toStartOf="@id/home_recipe_box_1"
-        app:layout_constraintTop_toBottomOf="@id/home_recipe_box_1"
         app:layout_constraintTop_toTopOf="@id/home_recipe_box_1"
         app:layout_constraintVertical_bias="0.0"/>
 
@@ -341,7 +331,7 @@
         android:layout_width="95dp"
         android:layout_height="130dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="500dp"
+        android:layout_marginTop="540dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/ic_friedrice"
         app:layout_constraintBottom_toTopOf="@id/bottom_base"
@@ -361,7 +351,6 @@
         android:src="@drawable/friedrice"
         app:layout_constraintEnd_toEndOf="@id/home_recipe_box_2"
         app:layout_constraintStart_toStartOf="@id/home_recipe_box_2"
-        app:layout_constraintTop_toBottomOf="@id/home_recipe_box_2"
         app:layout_constraintTop_toTopOf="@id/home_recipe_box_2" />
 
     <!--fried rice + calorie + photo3-->
@@ -370,7 +359,7 @@
         android:layout_width="95dp"
         android:layout_height="130dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="500dp"
+        android:layout_marginTop="540dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/ic_friedrice"
         app:layout_constraintBottom_toTopOf="@id/bottom_base"
@@ -390,7 +379,6 @@
         android:src="@drawable/friedrice"
         app:layout_constraintEnd_toEndOf="@id/home_recipe_box_3"
         app:layout_constraintStart_toStartOf="@id/home_recipe_box_3"
-        app:layout_constraintTop_toBottomOf="@id/home_recipe_box_3"
         app:layout_constraintTop_toTopOf="@id/home_recipe_box_3" />
 
     <!--bottom dock base-->
