--- a/mlkit/app/src/main/res/layout/home_page.xml
+++ b/mlkit/app/src/main/res/layout/home_page.xml
@@ -168,6 +168,7 @@
         android:layout_marginTop="350dp"
         android:layout_marginBottom="30dp"
         android:background="@drawable/eggicon"
+        android:scrollbarAlwaysDrawHorizontalTrack="true"
         app:layout_constraintBottom_toTopOf="@+id/home_text_lunch"
         app:layout_constraintRight_toLeftOf="@id/home_watermelon"
         app:layout_constraintStart_toStartOf="@id/home_text_fridge"
@@ -182,6 +183,7 @@
         android:layout_marginTop="350dp"
         android:layout_marginBottom="30dp"
         android:background="@drawable/watermelonicon"
+        android:scrollbarAlwaysDrawHorizontalTrack="true"
         app:layout_constraintBottom_toTopOf="@+id/home_text_lunch"
         app:layout_constraintRight_toLeftOf="@id/home_springonion"
         app:layout_constraintStart_toStartOf="@id/home_text_fridge"
@@ -196,6 +198,7 @@
         android:layout_marginTop="350dp"
         android:layout_marginBottom="30dp"
         android:background="@drawable/springonionicon"
+        android:scrollbarAlwaysDrawHorizontalTrack="true"
         app:layout_constraintBottom_toTopOf="@+id/home_text_lunch"
         app:layout_constraintRight_toLeftOf="@id/home_mushroom"
         app:layout_constraintStart_toStartOf="@id/home_text_fridge"
@@ -210,6 +213,7 @@
         android:layout_marginTop="350dp"
         android:layout_marginBottom="30dp"
         android:background="@drawable/mushroomicon"
+        android:scrollbarAlwaysDrawHorizontalTrack="true"
         app:layout_constraintBottom_toTopOf="@+id/home_text_lunch"
         app:layout_constraintLeft_toRightOf="@id/home_springonion"
         app:layout_constraintStart_toStartOf="@id/home_text_fridge"
@@ -259,6 +263,7 @@
         android:layout_marginEnd="200dp"
         android:layout_marginBottom="20dp"
         android:background="@drawable/ic_recipe_box"
+        android:scrollbarAlwaysDrawHorizontalTrack="false"
         app:layout_constraintBottom_toBottomOf="@id/bottom_base"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintRight_toLeftOf="@id/home_recipe_box_2"
@@ -274,6 +279,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="20dp"
         android:background="@drawable/ic_recipe_box"
+        android:scrollbarAlwaysDrawHorizontalTrack="false"
         app:layout_constraintBottom_toBottomOf="@id/bottom_base"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintRight_toLeftOf="@id/home_recipe_box_3"
@@ -290,6 +296,7 @@
         android:layout_marginEnd="5dp"
         android:layout_marginBottom="20dp"
         android:background="@drawable/ic_recipe_box"
+        android:scrollbarAlwaysDrawHorizontalTrack="false"
         app:layout_constraintBottom_toBottomOf="@id/bottom_base"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toRightOf="@id/home_recipe_box_3"
@@ -305,6 +312,7 @@
         android:layout_marginTop="540dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/ic_friedrice"
+        android:scrollHorizontally="true"
         app:layout_constraintBottom_toTopOf="@id/bottom_base"
         app:layout_constraintEnd_toEndOf="@id/home_recipe_box_1"
         app:layout_constraintStart_toStartOf="@id/home_recipe_box_1"
