--- a/mlkit/app/src/main/res/layout/fragment_hardcode_recipe.xml
+++ b/mlkit/app/src/main/res/layout/fragment_hardcode_recipe.xml
@@ -22,8 +22,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        app:layout_/>
+        app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
         android:id="@+id/ellipseRecipe"
@@ -38,8 +37,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        app:layout_/>
+        app:layout_constraintVertical_bias="1.0" />
 
         <ImageView
         android:id="@+id/recipeDescription"
@@ -54,8 +52,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        app:layout_/>
+        app:layout_constraintVertical_bias="1.0" />
 
     <View
         android:id="@+id/charPng"
